--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,27 +9,39 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/background"
-        android:scaleType="centerCrop"/>
+        android:background="#3BFFFFFF"
+        android:backgroundTint="#23FFFFFF"
+        android:scaleType="centerCrop"
+        android:src="@drawable/bgcastle" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="48sp"
-        android:text="I Have To Fly!"
-        android:textColor="#ffffff"
+        android:layout_width="254dp"
+        android:layout_height="64dp"
         android:layout_above="@id/play"
         android:layout_below="@id/highScoreTxt"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="195dp"
+        android:background="#3BFFFFFF"
+        android:fontFamily="cursive"
+        android:text="ButtStabbers!"
+        android:textColor="#ffffff"
+        android:textSize="48sp" />
 
     <TextView
+        android:id="@+id/play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="304dp"
+        android:layout_marginEnd="299dp"
+        android:layout_marginBottom="22dp"
+        android:fontFamily="cursive"
         android:text="Play"
-        android:textSize="64sp"
-        android:layout_centerInParent="true"
         android:textColor="#000000"
-        android:id="@+id/play"/>
+        android:textSize="64sp" />
 
     <TextView
         android:layout_width="wrap_content"
