--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:foregroundTint="#2B2D30"
     tools:context=".MainActivity">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignTop="@+id/Logo"
+        android:layout_marginTop="-14dp"
         android:background="#3BFFFFFF"
         android:backgroundTint="#23FFFFFF"
         android:scaleType="centerCrop"
@@ -18,7 +21,6 @@
         android:layout_width="254dp"
         android:layout_height="64dp"
         android:layout_above="@id/play"
-        android:layout_below="@id/highScoreTxt"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="195dp"
         android:background="#3BFFFFFF"
@@ -27,38 +29,47 @@
         android:textColor="#ffffff"
         android:textSize="48sp" />
 
-    <TextView
-        android:id="@+id/play"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="304dp"
-        android:layout_marginEnd="299dp"
-        android:layout_marginBottom="22dp"
-        android:fontFamily="cursive"
-        android:text="Play"
-        android:textColor="#000000"
-        android:textSize="64sp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textColor="#000000"
-        android:text="High Score"
-        android:id="@+id/highScoreTxt"
-        android:layout_margin="16dp"
-        android:layout_alignParentRight="true"/>
 
     <ImageView
+        android:id="@+id/volumeCtrl"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
-        android:id="@+id/volumeCtrl"
-        android:src="@drawable/ic_volume_up_black_24dp"/>
+        android:src="@drawable/ic_volume_up_black_24dp" />
+
+
+    <Button
+        android:id="@+id/play"
+        android:layout_width="129dp"
+        android:layout_height="70dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="308dp"
+        android:layout_marginTop="275dp"
+        android:layout_marginEnd="293dp"
+        android:layout_marginBottom="66dp"
+        android:backgroundTint="#03A9F4"
+        android:fontFamily="serif"
+        android:text="Play"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/Logo"
+        android:layout_width="198dp"
+        android:layout_height="112dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="305dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="228dp"
+        android:layout_marginBottom="281dp"
+        android:fontFamily="cursive"
+        android:text="Back Stabbers"
+        android:textSize="34sp" />
 
 </RelativeLayout>
